--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/vue-query": "^5.90.2",
     "axios": "^1.12.2",
     "vue": "^3.5.22",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
