--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@tanstack/vue-query": "^5.90.2",
+    "@pinia/colada": "^0.17.6",
     "axios": "^1.12.2",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.5.1"
