--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,13 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "VITE_API_BASE_URL": "https://www.thecocktaildb.com/api/json/v1/1"
+  },
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": "https://www.thecocktaildb.com/api/json/v1/1"
+    }
+  }
 }
